View3D: add padding to map-buttons-container to avoid overlap with 3D controls

--- a/plugins/style/View3D.css
+++ b/plugins/style/View3D.css
@@ -16,3 +16,7 @@ div.view3d-busy-overlay > div.spinner {
     height: 4em;
     margin-right: 1em;
 }
+
+div.plugins-container-3d > div.map-buttons-container {
+    padding-top: 18em;
+}
